--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -32,7 +32,9 @@ In the following, we discuss the algorithm and implementation of the sensitivity
     "The depth of investigation mask is a property of the cells of the mesh only so the rows of the matrix (data) are sum-square normalized as follows.\n",
     "\n",
     "$$\n",
-    "\\mathbf{J} = \\Bigg|\\frac{\\mathbf\\partial{F}_{n}(\\mathbf{m})}{\\partial{\\mathbf{m}}}\\Bigg|_{n=1:N}^{2}\n",
+    "\mathbf{doi} = \left[\sum_{n=1}^{N}\left(\frac{\mathbf{J}_{n:}}{w_n}\right)^{2}\right]^{(1/2)}\n",
+    
+    "where $w_n$ are the data uncertainties associated with the $n^{th}$ datum.
     "$$\n",
     "\n",
     "The resulting vector can then be thought of as the degree to which the aggregate data changes due to a small perturbation in each model cell.  The depth of investigation mask is then computed by thresholding those sensitivities"
