--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@book{nabighian_1989,
+    title={Time-domain electromagnetic prospecting methods},
+    volume={2},
+    publisher={Society of Exploration Geophysicists},
+    author={Nabighian, M. N., and Macnae, J. C.},
+    year={1989},
+}
+
 
 @book{nabigian_1991,
 	title = {Time Domain Electromagnetic Prospecting Methods},
@@ -100,4 +108,26 @@
 	year = {2019},
 	pages = {268-282},
 	doi = {10.1093/gji/ggz156}
+}
+
+
+@article{li_1999,
+    title = {Estimating depth of investigation in DC resistivity and IP surveys},
+    volume = {2},
+    journal = {Geophysics},
+    issue = {64},
+    author = {Li Y., and D. W. Oldenburg},
+    year = {1999},
+    pages = {403-416},
+}
+
+
+@article{christiansen_2012,
+    title={A global measure for depth of investigation.},
+    volume={4},
+    issue={77},
+    journal={Geophysics},
+    author={Christiansen A.V. and Auken E.},
+    year={2012},
+    pages={WB171–WB177}
 }
