--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -7,8 +7,6 @@
    "source": [
     "# Depth of Investigation\n",
     "\n",
-    "![masked_model](./images/masked_model.png)\n",
-    "\n",
     "One way to measure the depth of investigation of a sensitivity based inversion algorithm is to filter the model cells as a percentage (or percentile) of the sensitivity matrix.  SimPEG inversion routines calculate sensitivities at each iteration.  A mask can be calculated at each iteration by asking what cells in the inversion model are associated with a sensitivity that exceeds some threshold.  There are a number of ways to calculate a threshold including percentage, log percentage, and percentile.  In each calculation, the resulting mask should broadly look like a heterogeneous depth cutoff since the data are naturally less sensitive to deeper cells in all geophysical methods. In the following, we discuss the algorithm and implementation of the sensitivity cutoff strategy."
    ]
   },
@@ -71,7 +69,11 @@
     "\n",
     "![interface](./images/uijson.png)\n",
     "\n",
-    "It will create a sensitivity cutoff mask saved on the mesh\n",
+    "The cutoff methods are selectable in the dropdown\n",
+    "\n",
+    "![cutoff_options](./images/cutoff_options.png)\n",
+    "\n",
+    "Whatever the options, the application will create a sensitivity cutoff mask saved on the mesh\n",
     "\n",
     "![mask](./images/sensitivity_mask.png)\n",
     "\n",
