fix suggestions that broke the json format

--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -7,10 +7,7 @@
    "source": [
     "# Depth of Investigation\n",
     "\n",
-
-    "In geophysics, "depth of investigation" refers to the maximum depth below the surface from which a geophysical survey can reliably measure. It depends on factors like the survey design and physical properties of the subsurface material. Several strategies have been proposed to assess uncertainties in models recovered from inversion. Nabighian & Macnae (1989) used a skin depth approach for electromagnetic surveys, assuming a background halfspace resistivity. Li&O (1999) implemented a cut-off value based on two inverted models obtained with slightly different assumptions. Christiansen & Auken (2012) proposed a mask based on the sum-square of sensitivities to estimate a volume of low confidence.
-
-In the following, we discuss the algorithm and implementation of the sensitivity cutoff strategy."
+    "In geophysics, \"depth of investigation\" refers to the maximum depth below the surface from which a geophysical survey can reliably measure. It depends on factors like the survey design and physical properties of the subsurface material. Several strategies have been proposed to assess uncertainties in models recovered from inversion. Nabighian & Macnae (1989) used a skin depth approach for electromagnetic surveys, assuming a background halfspace resistivity. Li&O (1999) implemented a cut-off value based on two inverted models obtained with slightly different assumptions. Christiansen & Auken (2012) proposed a mask based on the sum-square of sensitivities to estimate a volume of low confidence. In the following, we discuss the algorithm and implementation of the sensitivity cutoff strategy."
    ]
   },
   {
@@ -26,17 +23,17 @@ In the following, we discuss the algorithm and implementation of the sensitivity
     "\\mathbf{J} = \\frac{\\mathbf\\partial{F}(\\mathbf{m})}{\\partial{\\mathbf{m}}}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{m}$ is the model vector, and $\\mathbf{F}(\\mathbf{m})$ represents the forward modelling operation as a function of the model.  The dimensions of the sensitivity are $n\\times m$ where $n$ is the number of data and $m$ are the number of mesh cells.\n",
+    "where $\\mathbf{m}$ is the model vector, and $F(\\mathbf{m})$ represents the forward modelling operation as a function of the model.  The sensitivity matrix $\\mathbf{J}$ is a dense array with dimensions $N\\times M$, where $N$ is the number of data and $M$ are the number of mesh cells.\n",
     "\n",
-    "The depth of investigation mask is a property of the cells of the mesh only so the rows of the matrix (data) are sum-square normalized as follows.\n",
+    "The depth of investigation mask is a property of the cells of the mesh only so the rows of the sensitivity matrix (data) are sum-square normalized as follows.\n",
     "\n",
     "$$\n",
-    "\mathbf{doi} = \left[\sum_{n=1}^{N}\left(\frac{\mathbf{J}_{n:}}{w_n}\right)^{2}\right]^{(1/2)}\n",
-
-    "where $w_n$ are the data uncertainties associated with the $n^{th}$ datum.
+    "\\mathbf{J}_{norm} = \\left[\\sum_{n=1}^{N}\\left(\\frac{\\mathbf{J}_{n:}}{w_n}\\right)^{2}\\right]^{(1/2)}\n",
     "$$\n",
     "\n",
-    "The resulting vector can then be thought of as the degree to which the aggregate data changes due to a small perturbation in each model cell.  The depth of investigation mask is then computed by thresholding those sensitivities"
+    "where $w_n$ are the data uncertainties associated with the $n^{th}$ datum.\n",
+    "\n",
+    "The resulting vector $J_{norm}$ can then be thought of as the degree to which the aggregate data changes due to a small perturbation in each model cell.  The depth of investigation mask is then computed by thresholding those sensitivities"
    ]
   },
   {
@@ -88,6 +85,22 @@ In the following, we discuss the algorithm and implementation of the sensitivity
     "\n",
     "![masked_model](./images/masked_model.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1079da0d-4ea2-4f00-b957-92199dd39cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920f0637-4028-40c7-b2c6-5976f5e90afd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
