--- a/docs/inversion/regularization.ipynb
+++ b/docs/inversion/regularization.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "id": "3e78e630",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "(l2-norm)=\n",
     "\n",
@@ -92,7 +94,7 @@
     "\n",
     "\n",
     "\n",
-    "### Model weights (future option)\n",
+    "### Model weights\n",
     "\n",
     "\n",
     "Any of the regularization functions mentioned above can be further augmented with weights associated with each model cell such that\n",
@@ -101,7 +103,7 @@
     "\\phi_i = \\| \\mathbf{W}_i f_i(\\mathbf{m}) \\|_2^2\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{W}_i$ contains positive values that change the relative strength of the regularization function in specific volumes of the 3D space. This is typically done for advanced constraints to reflect variable degrees of confidence in the reference geological model (e.g. high near the surface, low at depth). This option is currently not available but it is planned to be included in geoapps v0.12.0.\n",
+    "where $\\mathbf{W}_i$ contains positive values that change the relative strength of the regularization function in specific volumes of the 3D space. This is typically done for advanced constraints to reflect variable degrees of confidence in the reference geological model (e.g. high near the surface, low at depth).\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
@@ -174,7 +176,7 @@
     "$$\n",
     "\n",
     "\n",
-    "That is, we ask the inversion to recover anomalies that have small volumes but large physical property contrasts. This is desirable if we know the geological bodies to be discrete and compact (e.g. kimberlite pip, dyke, etc.). The example below demonstrates the outcome of an inversion for different combinations of norms applied to the model\n",
+    "That is, we ask the inversion to recover anomalies that have small volumes but large physical property contrasts. This is desirable if we know the geological bodies to be discrete and compact (e.g. kimberlite pipe, dyke, etc.). The example below demonstrates the outcome of an inversion for different combinations of norms applied to the model\n",
     "\n",
     "![sparse_model](./images/sparse_models.png)\n",
     "\n",
@@ -278,6 +280,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a2367cf-1fb8-4e0c-999a-1a1fcde87d2d",
+   "metadata": {},
+   "source": [
+    "## Rotated Gradients\n",
+    "\n",
+    "In the standard implementation, the smoothness of the model is determined by gradients computed along the three cartesian axes.  By rotating the axes along which the gradients are computed, we can tailor the smoothness for things like dipping bodies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2bf887ab",
    "metadata": {},
    "source": [
@@ -290,6 +302,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
