start gradient rotation writeup

--- a/docs/inversion/regularization.ipynb
+++ b/docs/inversion/regularization.ipynb
@@ -293,8 +293,37 @@
    "id": "2bf887ab",
    "metadata": {},
    "source": [
-    "<p style=\"page-break-after:always;\"></p>\n"
+    "## Rotated Gradients\n",
+    "\n",
+    "In the standard implementation, the smoothness of the model is determined by gradients computed along the three cartesian axes.  By rotating the axes along which the gradients are computed, we can tailor the smoothness for things like dipping bodies.  The input for the rotated gradient option is a property group containing strike and dip, dip direction and dip, or 3D vector data stored in the cells of the inversion mesh.\n",
+    "\n",
+    "![gradient_rotations](./images/gradient_rotations.png)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e8c1365-3012-4d2c-9219-38d99586f9b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f503e10-ef9e-432c-8175-675d87d0b58a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f40382fd-52a4-4bc3-9be6-1dfe644d866c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
