--- a/docs/inversion/mesh_design.ipynb
+++ b/docs/inversion/mesh_design.ipynb
@@ -16,16 +16,20 @@
     "\n",
     "An Octree mesh can be though of as the combination of a base mesh and refinements.  The base mesh is defined by the core extent, padding, and the base cell resolution.  These concepts are explored in further detail in the following sub-sections.\n",
     "\n",
-    "- [A region of interest (extent)](#Mesh-extent)\n",
-    "- [Base cell resolution](#Base-cell-size)\n",
-    "- [Padding distance](#Padding-cells)\n",
+    "- [A region of interest (extent)](mesh-extent)\n",
+    "- [Base cell resolution](base-cell-size)\n",
+    "- [Padding distance](padding-distance)\n",
     "\n",
     "\n",
     "![base_mesh](./images/mesh_core.png)\n",
     "\n",
+    "(mesh-extent)=\n",
+    "\n",
     "### Mesh extent\n",
     "\n",
     "The mesh extent is provided as a `geoh5py.object` from which the bounding box is computed.  For geophysical inversion this will in most cases be the geophysical survey object so that core region of the mesh will be centered below the data.  For all `geoh5py.BaseSurvey` objects that contain a `complement` object (transmitters, base stations, current electrodes), the extent will be computed from the superposition of the object and it's complement.\n",
+    "\n",
+    "(base-cell-size)=\n",
     "\n",
     "### Base cell size\n",
     "\n",
@@ -37,6 +41,8 @@
     "\n",
     "Numerical artefacts due to the discretization of topography decay sufficiently when receivers are roughly two cell dimensions away from the nearest edge or corner of a mesh cell in the air/earth boundary. For example, if the lowest drape height in given airborne survey is 60 m, a prudent cell size would be in the range of ~30 m.  Another rule of thumb is that the cell size should be smaller than half the smallest data spacing.  This is especially important for electrical methods where the electric field may be discontinuous and numerical artefacts may arise if the cells are not small enough to capture rapid changes in the field.  For example, a 40m dipole direct-current survey would suggest a cell size around ~20m.\n",
     "\n",
+    "\n",
+    "(padding-distance)=\n",
     "\n",
     "### Padding cells\n",
     "\n",
@@ -142,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
