--- a/docs/tutorials/airborne_tem.ipynb
+++ b/docs/tutorials/airborne_tem.ipynb
@@ -97,7 +97,6 @@
     "```{figure} ./images/atem/time_spacing.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: atem_forward\n",
     "---\n",
     "```"
    ]
@@ -121,7 +120,7 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the last time channel (10 msec) is roughly 3.3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
+    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](padding-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the last time channel (10 msec) is roughly 3.3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
     "\n",
     "\n",
     "### Refinements\n",
@@ -205,6 +204,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
