--- a/docs/tutorials/dc_resistivity.ipynb
+++ b/docs/tutorials/dc_resistivity.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "## Data\n",
     "\n",
-    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on seven receivers per transmitter dipole. Line separation was set to 100 m ([Figure 5](dc_topo)).\n",
+    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on seven receivers per transmitter dipole. Line separation was set to 100 m ([Figure 5](dc_forward)).\n",
     "\n",
     "The following parameters were used for the forward simulation:\n",
     "\n",
@@ -159,6 +159,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
