--- a/docs/tutorials/introduction.ipynb
+++ b/docs/tutorials/introduction.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "# Tutorials\n",
     "\n",
-    "This chapter demonstrates how to run standalone and joint inversions of geophysical data using SimPEG and the user-interface created for Geoscience ANALYST. We generated several synthetic surveys over the Flin Flon model to simulate an exploration program over a VMS deposit.\n",
+    "This chapter demonstrates how to run standalone and joint inversions of geophysical data using SimPEG and the user interface created for Geoscience ANALYST. We generated several synthetic surveys over the Flin Flon model to simulate an exploration program over a VMS deposit.\n",
     "The goal is to use ground and airborne geophysics to characterize the physical property and shape of the ore body and host rocks. This case study focuses on the following three datasets and respective physical properties:\n",
     "\n",
-    "In preparation for the joint inversion, we first inverted each dataset independently ([Figure 1](standalone)). It serves as a quality control step for data uncertainties estimation and mesh design. We can solve possible convergence issues before attempting to couple the physical property models in a joint process.\n",
+    "In preparation for the joint inversion, we first inverted each dataset independently. It serves as a quality control step for data uncertainty estimation and mesh design. We can solve possible convergence issues before attempting to couple the physical property models in a joint process.\n",
     "\n",
-    "The data is then jointly with a cross-gradient coupling constraint ([Figure 2](joint)).\n",
+    "The data is then jointly with a cross-gradient coupling constraint.\n",
     "\n",
     "\n",
     "```{figure} ./images/ore_body.png\n",
@@ -42,6 +42,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
