--- a/docs/tutorials/tipper.ipynb
+++ b/docs/tutorials/tipper.ipynb
@@ -16,7 +16,7 @@
     "---\n",
     "scale: 25%\n",
     "\n",
-    "name: dc_model\n",
+    "name: tipper_model\n",
     "---\n",
     "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
     "```\n",
@@ -83,7 +83,7 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the lowest frequency (30 Hz) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
+    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](padding-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the lowest frequency (30 Hz) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
     "\n",
     "\n",
     "### Refinements\n",
@@ -146,6 +146,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
