--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -2,147 +2,57 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bdf3d5d2",
+   "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
-    "# Gravity Inversion\n",
+    "# Forrestania (Joint Grav/Mag/EM)\n",
     "\n",
-    "This section focuses on the inversion of airborne tensor and ground gravity data generated from the Flin Flon density model.\n",
-    "\n",
-    "```{figure} ./images/gravity/grav_model.png\n",
-    "---\n",
-    "scale: 25%\n",
-    "name: grav_model\n",
-    "---\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
-    "```\n",
-    "\n",
-    "\n",
+    "This uses public data from the Geological Survey of Western Australia over the Forrestania geological province.\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e2881a0",
+   "id": "7463eea7-04b6-466a-aa35-58269605c353",
    "metadata": {},
    "source": [
-    "## Forward simulation\n",
+    "## Data\n",
     "\n",
-    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations.\n",
+    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) importer to quickly convert the original file formats into `geoh5` with a simple `drag & drop` to the viewport. \n",
+    "The original datasets comprise\n",
     "\n",
-    "The following parameters were used for the forward simulation:\n",
+    " - Airborne magnetic survey: `60472_AOI4.gdb`\n",
+    " - Ground gravity survey: `Forrestania_Gravity_Station_trim_.csv`\n",
+    " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.ers`\n",
     "\n",
-    "```{figure} ./images/gravity/grav_forward.png\n",
+    "```{figure} ./images/data_import.png\n",
     "---\n",
-    "scale: 50%\n",
-    "name: grav_forward\n",
+    "name: data_import\n",
+    "\n",
     "---\n",
+    "Data import from their original format to `geoh5`.\n",
     "```\n",
     "\n",
-    "After running the forward simulation, we obtain gravity corrected data as shown below. The gravity survey appears to be mostly influenced by the large formations, with little signal apparent from the ore body. Since we have used relative densities, the simulated data is equivalent to a terrain correction with reference density, of 2.67 g/cc in this case.\n",
+    "Once imported, the data can be activated for visualization.  \n",
     "\n",
-    "```{figure} ./images/gravity/gz_data.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: gz_data\n",
-    "---\n",
-    "Vertical component of the gravity field (gz) measured over the zone of interest.\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3a04308",
-   "metadata": {},
-   "source": [
-    "## Mesh creation\n",
+    "### Processing\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the gravity survey.\n",
+    "Note that both the DEM and airborne magnetic survey were imported at an arbitrary 0 m elevation and do not reflect the true position.\n",
+    "We first need to modify our object such that the data is accurately located in 3D space. \n",
     "\n",
-    "The core param are as follow:\n",
-    "\n",
-    "```{figure} ./images/magnetics/mesh_core.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: mag_core\n",
-    "---\n",
-    "Core mesh parameters.\n",
+    "#### Step 1: Convert the 2D DEM into a 3D surface\n",
+    "```{figure} ./images/create_surface.png\n",
     "```\n",
     "\n",
-    "### Refinements\n",
-    "\n",
-    "- The first refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data. We use a maximum distance of 100 m to limit the refinement near each station.\n",
-    "\n",
-    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/magnetics/mesh_refinement.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: mag_refinement\n",
-    "---\n",
-    "Refinement strategy used for the magnetic modeling.\n",
+    "#### Step 2a: Transfer the DEM data onto the airborne survey (curve). \n",
+    "```{figure} ./images/transfer_dem.png\n",
     "```\n",
     "\n",
-    "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47ba8fb2",
-   "metadata": {},
-   "source": [
-    "## Ground gravity\n",
-    "\n",
-    "The ground gravity data are assigned a constant floor uncertainty value of 0.1 mGal. We apply the the following inversion parameters:\n",
-    "\n",
-    "```{figure} ./images/gravity/gz_input.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: gz_input\n",
-    "---\n",
-    "```\n",
-    "\n",
-    "After running the inversion we obtain:\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/gravity/gz_no_ref.png\n",
-    "---\n",
-    "name: gz_no_ref\n",
-    "\n",
-    "---\n",
-    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 5).\n",
-    "\n",
-    "(Bottom) Slices through the recovered relative density model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
-    "Ore shell is shown for reference.\n",
-    "```\n",
-    "\n",
-    "Notice that the inversion resolves the boundaries between the rhyolite unit and host mafic units, but poorly recovers the ore body. That is, the ore body does not generate a gravity anomaly strong enough within the host geology to be detected by the ground gravity survey."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f96511f7",
-   "metadata": {},
-   "source": [
-    "(ftg-data)=\n",
-    "\n",
-    "## Tensor gravity gradiometry (FTG)\n",
-    "\n",
-    "We now look at the airborne fixed-wing full-tensor gravity gradiometry (FTG) data. The FTG system measures six independent components of the gradient tensor: $g_{xx},\\; g_{xy},\\; g_{xz},\\; g_{yy},\\; g_{yz}$ and $g_{zz}$. We generate a survey flown at 45 degree azimuth, 200 m line spacing, at a nominal drape height of 60 m above topography.\n",
-    "\n",
-    "Using the same relative density model as previously, we run the forward simulation and obtain terrain-corrected data show below.\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/gravity/gg_data.png\n",
-    "---\n",
-    "name: gg_data\n",
-    "\n",
-    "---\n",
-    "(Top) Components of the gravity gradiometry data measured over the zone of interest. (Bottom) Plan view of the density model and flight lines. The green and red marker indicate the flight direction.\n",
+    "#### Step 2b: Re-assign the Z channel to the DEM + radar height.\n",
+    "```{figure} ./images/drape_mag.png\n",
     "```\n",
     "\n"
    ]
@@ -152,41 +62,90 @@
    "id": "dd15a36f",
    "metadata": {},
    "source": [
-    "## Unconstrained FTG\n",
+    "## Gravity\n",
     "\n",
-    "We repeat the same inverse process as for the ground gravity data, but this time with the airborne survey. A floor uncertainty value of 0.1 Eotvos was assigned to all the components. After running the inversion with obtain.\n",
+    "We begin our analysis with the ground gravity survey. We will attempt to estimate the shape and depth of the causative body at depth.\n",
     "\n",
+    "### Inputs\n",
     "\n",
-    "```{figure} ./images/gravity/gg_no_ref.png\n",
-    "---\n",
-    "name: gg_no_ref\n",
+    "Gravity data are sensitive to variations in the density of rocks. The data were already processed and provided as terrain-corrected (2.67 g/cc) residual data. We can therefore go directly to the inversion phase. \n",
     "\n",
-    "---\n",
-    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 7).\n",
-    "\n",
-    "(Bottom) Slices through the recovered relative density model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
-    "Ore shell is shown for reference.\n",
+    "```{figure} ./images/gravity_data.png\n",
     "```\n",
     "\n",
-    "Just like the ground gravity result, the airborne inversion recovers well the boundary between the rhyolite and host mafic rocks. The ore body is also imaged on the top 200 m. In addition, we recover density structures within the Hidden Formation related to the overburden layer.\n",
+    "### Inversion options\n",
     "\n",
+    "The following options are set for the inversion.\n",
+    "\n",
+    "```{figure} ./images/gravity_setup.png\n",
+    "```\n",
+    "- Assign the data uncertainty to a quarter of the standard deviation (0.05 mGal). This is a somewhat conservative estimate that takes into account both the instrumental and numerical noise.\n",
+    "- Use a `0 g/cc` reference value for the model. This assumes that the signal from the background density was accurately subtracted from the data.\n",
+    "- Leave the `Mesh` option unchecked. We will let the code create an octree mesh based on the average data separation and extent.\n",
+    "\n",
+    "### Inversion results\n",
+    "\n",
+    "After completion of the inversion, we load the results and assess convergence and data fit.\n",
+    "\n",
+    "```{figure} ./images/grav_predicted.png\n",
+    "```\n",
+    "\n",
+    "We note the following:\n",
+    "\n",
+    " - It took 13 iterations to converge to the target misfit.\n",
+    " - The following 12 iterations have increased the model complexity ($phi_m$) but preserved the data fit ($phi_d$).\n",
+    " - Most of the important gravity anomalies appear to be reproduced by the final model.\n",
+    "\n",
+    "#### Smooth solution (L2-norm)\n",
+    "\n",
+    "```{figure} ./images/grav_l2_model.png\n",
+    "```\n",
+    "\n",
+    "The smooth solution (iteration 13) indicates the presence of a dense anomaly extending at depth with density contrasts ranging from [-0.02, 0.05] g/cc. The negative density contrasts appear to be localized around the main positive anomaly, likely due to the smoothness constraint and the lack of `bound` constraints. Some smaller \"fuzzy\" anomalies are visible at the margins.  \n",
+    "\n",
+    "#### Compact solution (L0-norm)\n",
+    "\n",
+    "```{figure} ./images/grav_l2_model.png\n",
+    "```\n",
+    "\n",
+    "As an alternative solution, the compact model (iteration 25) recovers a well-defined dense body within a mostly uniform background. Density contrasts have substantially increased in the range of [0.0, 0.56] g/cc.\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0445a40",
+   "id": "20c39e9c-c7a5-4610-9c60-cac1e955fb19",
    "metadata": {},
    "source": [
-    "## Detrending\n",
+    "## Magnetics\n",
     "\n",
-    "Section to explain different strategies for regional signal removal\n",
+    "We follow up with the processing of the airborne magnetic data.\n",
     "\n",
-    "- Polynomial\n",
+    "### Inputs\n",
+    "\n",
+    "The source of the magnetic signal can generally be attributed to the presence or destruction of magnetic minerals in rocks (mainly magnetite). Magnetometers measure the Total Magnetic Intensity (TMI) that includes both the primary (source) field and secondary fields (signal) from the local geology. The first step is to remove the primary (inducing) field at the time and location of acquisition.\n",
+    "\n",
+    "#### Step 1: Set the coordinate system of survey\n",
+    "```{figure} ./images/mag_coordinates.png\n",
+    "```\n",
+    "\n",
+    "#### Step 2: Lookup/remove IGRF \n",
     "\n",
     "\n",
-    "- Scooping method"
+    "#### Step 3: Downsampling\n",
+    "\n",
+    "We can downsample along line to reduce the computation cost and bring the resolution closer to the gravity survey.\n",
+    "\n",
+    "```{figure} ./images/mag_downsample.png\n",
+    "```\n",
+    "\n",
+    "### Inversion options\n",
+    "\n",
+    "The following options are set for the inversion.\n",
+    "\n",
+    "```{figure} ./images/gravity_setup.png\n",
+    "```"
    ]
   }
  ],
@@ -195,6 +154,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
