Continue on mag

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -7,11 +7,13 @@
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
-    "# Forrestania (Joint Grav/Mag/EM)\n",
+    "# Forrestania (Joint Grav/Mag)\n",
     "\n",
-    "This uses public data from the Geological Survey of Western Australia over the Forrestania geological province.\n",
+    "This uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province.\n",
     "\n",
-    "<p style=\"page-break-after:always;\"></p>"
+    "\n",
+    "## Geological setting\n",
+    "\n"
    ]
   },
   {
@@ -21,22 +23,21 @@
    "source": [
     "## Data\n",
     "\n",
-    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) importer to quickly convert the original file formats into `geoh5` with a simple `drag & drop` to the viewport. \n",
-    "The original datasets comprise\n",
+    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) to import and convert the original file formats into `geoh5`. This can be done with a simple `drag & drop` to the viewport. The data bundle includes\n",
     "\n",
     " - Airborne magnetic survey: `60472_AOI4.gdb`\n",
     " - Ground gravity survey: `Forrestania_Gravity_Station_trim_.csv`\n",
     " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.ers`\n",
+    "\n",
+    "Once imported, the data can be activated for visualization.  \n",
     "\n",
     "```{figure} ./images/data_import.png\n",
     "---\n",
     "name: data_import\n",
     "\n",
     "---\n",
-    "Data import from their original format to `geoh5`.\n",
+    "Data imported from their original format to `geoh5` for visualization.\n",
     "```\n",
-    "\n",
-    "Once imported, the data can be activated for visualization.  \n",
     "\n",
     "### Processing\n",
     "\n",
@@ -105,7 +106,7 @@
     "\n",
     "#### Compact solution (L0-norm)\n",
     "\n",
-    "```{figure} ./images/grav_l2_model.png\n",
+    "```{figure} ./images/grav_lp_model.png\n",
     "```\n",
     "\n",
     "As an alternative solution, the compact model (iteration 25) recovers a well-defined dense body within a mostly uniform background. Density contrasts have substantially increased in the range of [0.0, 0.56] g/cc.\n",
@@ -120,32 +121,67 @@
    "source": [
     "## Magnetics\n",
     "\n",
-    "We follow up with the processing of the airborne magnetic data.\n",
+    "We follow up with the processing of the airborne magnetic data. The survey was conducted between February and March 1988.\n",
     "\n",
     "### Inputs\n",
     "\n",
-    "The source of the magnetic signal can generally be attributed to the presence or destruction of magnetic minerals in rocks (mainly magnetite). Magnetometers measure the Total Magnetic Intensity (TMI) that includes both the primary (source) field and secondary fields (signal) from the local geology. The first step is to remove the primary (inducing) field at the time and location of acquisition.\n",
+    "The source of the magnetic signal can generally be attributed to the presence or destruction of magnetic minerals in rocks (mainly magnetite). Magnetometers measure the Total Magnetic Intensity (TMI), which includes both the primary (source) field and secondary fields (signal) from the local geology. The first step is to remove the primary (inducing) field at the time and location of acquisition.\n",
     "\n",
-    "#### Step 1: Set the coordinate system of survey\n",
+    "#### Step 1: Set the coordinate system of the survey\n",
     "```{figure} ./images/mag_coordinates.png\n",
     "```\n",
     "\n",
     "#### Step 2: Lookup/remove IGRF \n",
     "\n",
+    "The inversion routine requires Residual Magnetic Intensity (RMI), so we need to subtract the ambient field (IGRF). \n",
+    "```{figure} ./images/mag_igrf.png\n",
+    "```\n",
     "\n",
-    "#### Step 3: Downsampling\n",
+    "The inducing parameters at the time and location of the survey are\n",
     "\n",
-    "We can downsample along line to reduce the computation cost and bring the resolution closer to the gravity survey.\n",
+    "- Magnitude: 59127 nT\n",
+    "- Inclination: -66.9 $\\textdegree$\n",
+    "- Declination: -1.05 $\\textdegree$  \n",
+    "\n",
+    "#### Step 3: Detrend\n",
+    "The local background field appears to be slightly lower (~112 nT) than the computed IGRF model, as most of the data away from the main anomaly are below 0. To avoid modelling this background trend, we can remove the median value. \n",
+    "\n",
+    "```{figure} ./images/mag_detrend.png\n",
+    "```\n",
+    "\n",
+    "#### Step 4: Downsampling\n",
+    "\n",
+    "We can downsample the data along line to reduce the computation cost and bring the resolution closer to the gravity survey. Since the average flight height of this survey was 60 m, we can confidently downsample the lines by the same amount without affecting the wavelengths contained in the data.\n",
     "\n",
     "```{figure} ./images/mag_downsample.png\n",
     "```\n",
     "\n",
+    "### Create a mesh\n",
+    "\n",
+    "This time, we will create a mesh using the [Octree Mesh Creation](mesh-design) application. In preparation for the joint inversion, we will simply modify the gravity mesh parameters.\n",
+    "\n",
+    "#### Step 1: Load the octree parameters\n",
+    "Inspect the files attached to the gravity mesh, and load the `ui.json`.\n",
+    "\n",
+    "#### Step 2: Modify the refinements\n",
+    "Change the input object for `Refinement A` for the curve object of the magnetic survey.\n",
+    "\n",
+    "#### Step 3: Run and load the results\n",
+    "\n",
+    "```{figure} ./images/mag_mesh.png\n",
+    "```\n",
+    "\n",
+    "By doing so, we guarantee that the extent and base cell size remain the same - only the refinements will be catered to the magnetic survey.\n",
+    " \n",
     "### Inversion options\n",
     "\n",
     "The following options are set for the inversion.\n",
     "\n",
-    "```{figure} ./images/gravity_setup.png\n",
-    "```"
+    "```{figure} ./images/mag_setup.png\n",
+    "```\n",
+    "\n",
+    "- Assign the data uncertainty to a quarter of the standard deviation (125 nT). We can revisit this number after the first inversion.\n",
+    "- Use a `0 SI` reference value for the model. This assumes that we removed all background signal from the data.\n"
    ]
   }
  ],
