--- a/docs/inversion/mesh_design.ipynb
+++ b/docs/inversion/mesh_design.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
+    "(mesh-design)=\n",
+    "\n",
     "# Mesh design\n",
     "\n",
     "An appropriately designed computational mesh is an important component to the geophysical inversion.  There are both general and survey-specific strategies that may be used to design 'good' meshes for inversion.  This section provides complementary details to the core [Octree creation](https://mirageoscience-octree-creation-app.readthedocs-hosted.com/en/latest) documentation, so readers may want to reference both. \n",
