Add inversion results for mag

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -84,7 +84,7 @@
     "- Use a `0 g/cc` reference value for the model. This assumes that the signal from the background density was accurately subtracted from the data.\n",
     "- Leave the `Mesh` option unchecked. We will let the code create an octree mesh based on the average data separation and extent.\n",
     "\n",
-    "### Inversion results\n",
+    "### Results\n",
     "\n",
     "After completion of the inversion, we load the results and assess convergence and data fit.\n",
     "\n",
@@ -137,7 +137,7 @@
     "```{figure} ./images/mag_igrf.png\n",
     "```\n",
     "\n",
-    "The inducing parameters at the time and location of the survey are\n",
+    "The **inducing field parameters** at the time and location of the survey are\n",
     "\n",
     "- Magnitude: 59127 nT\n",
     "- Inclination: -66.9 $\\textdegree$\n",
@@ -180,8 +180,38 @@
     "```{figure} ./images/mag_setup.png\n",
     "```\n",
     "\n",
-    "- Assign the data uncertainty to a quarter of the standard deviation (125 nT). We can revisit this number after the first inversion.\n",
-    "- Use a `0 SI` reference value for the model. This assumes that we removed all background signal from the data.\n"
+    "- Set the inducing field parameters as described above.\n",
+    "- Assign the data uncertainty to a quarter of the standard deviation (125 nT).\n",
+    "- Use a `0 SI` reference value for the model. This assumes that we removed all background signal from the data.\n",
+    "- Assign the newly created octree mesh object.\n",
+    "- Leave the default lower bound value to 0 SI (non-negative). \n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "After completion of the inversion, we load the results and assess convergence and data fit.\n",
+    "\n",
+    "```{figure} ./images/mag_predicted.png\n",
+    "```\n",
+    "\n",
+    "We note the following:\n",
+    "\n",
+    " - It took 5 iterations to converge to the target misfit.\n",
+    " - The following 21 iterations have increased the model complexity ($phi_m$) but preserved the data fit ($phi_d$).\n",
+    " - Small anomalies are under-fitted, which could warrant a second inversion with lower uncertainties.\n",
+    "\n",
+    "#### Smooth solution (L2-norm)\n",
+    "\n",
+    "```{figure} ./images/mag_l2_model.png\n",
+    "```\n",
+    "\n",
+    "The smooth solution (iteration 5) indicates the presence of a susceptible body at depth. The shape and position  of the density model - including the presence of smaller \"fuzzy\" anomalies at the margins.  \n",
+    "\n",
+    "#### Compact solution (L0-norm)\n",
+    "\n",
+    "```{figure} ./images/mag_lp_model.png\n",
+    "```\n",
+    "\n",
+    "As an alternative solution, the compact model (iteration 25) recovers a well-defined dense body within a mostly uniform background. Density contrasts have substantially increased in the range of [0.0, 0.56] g/cc.\n"
    ]
   }
  ],
