--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -204,14 +204,14 @@
     "```{figure} ./images/mag_l2_model.png\n",
     "```\n",
     "\n",
-    "The smooth solution (iteration 5) indicates the presence of a susceptible body at depth. The shape and position  of the density model - including the presence of smaller \"fuzzy\" anomalies at the margins.  \n",
+    "The smooth solution (iteration 5) indicates the presence of a susceptible body at depth. The shape and location of the anomaly resemble the solution obtained with the gravity modelling, including the presence of smaller \"fuzzy\" anomalies at the margins.  \n",
     "\n",
     "#### Compact solution (L0-norm)\n",
     "\n",
     "```{figure} ./images/mag_lp_model.png\n",
     "```\n",
     "\n",
-    "As an alternative solution, the compact model (iteration 25) recovers a well-defined dense body within a mostly uniform background. Density contrasts have substantially increased in the range of [0.0, 0.56] g/cc.\n"
+    "As an alternative solution, the compact model (iteration 21) recovers a well-defined dense body within a mostly uniform background. Susceptibility contrasts have substantially increased in the range of [0.0, 2.0] SI.\n"
    ]
   }
  ],
