Fix links and labels.

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -34,7 +34,6 @@
     "```{figure} ./images/data_import.png\n",
     "---\n",
     "name: data_import\n",
-    "\n",
     "---\n",
     "Data imported from their original format to `geoh5` for visualization.\n",
     "```\n",
@@ -46,14 +45,26 @@
     "\n",
     "#### Step 1: Convert the 2D DEM into a 3D surface\n",
     "```{figure} ./images/create_surface.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
     "#### Step 2a: Transfer the DEM data onto the airborne survey (curve). \n",
     "```{figure} ./images/transfer_dem.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
     "#### Step 2b: Re-assign the Z channel to the DEM + radar height.\n",
     "```{figure} ./images/drape_mag.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n"
    ]
@@ -79,6 +90,10 @@
     "The following options are set for the inversion.\n",
     "\n",
     "```{figure} ./images/gravity_setup.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "- Assign the data uncertainty to a quarter of the standard deviation (0.05 mGal). This is a somewhat conservative estimate that takes into account both the instrumental and numerical noise.\n",
     "- Use a `0 g/cc` reference value for the model. This assumes that the signal from the background density was accurately subtracted from the data.\n",
@@ -121,63 +136,88 @@
    "source": [
     "## Magnetics\n",
     "\n",
-    "We follow up with the processing of the airborne magnetic data. The survey was conducted between February and March 1988.\n",
+    "We follow up with the processing of the airborne magnetic data.\n",
     "\n",
     "### Inputs\n",
     "\n",
-    "The source of the magnetic signal can generally be attributed to the presence or destruction of magnetic minerals in rocks (mainly magnetite). Magnetometers measure the Total Magnetic Intensity (TMI), which includes both the primary (source) field and secondary fields (signal) from the local geology. The first step is to remove the primary (inducing) field at the time and location of acquisition.\n",
+    "The source of the magnetic signal can generally be attributed to the presence or destruction of magnetic minerals in rocks (mainly magnetite). Magnetometers measure the Total Magnetic Intensity (TMI), which includes both the primary (source) field and secondary fields (signal) from the local geology. \n",
     "\n",
-    "#### Step 1: Set the coordinate system of the survey\n",
+    "#### Step 1: Residual data\n",
+    "\n",
+    "The inversion routine requires Residual Magnetic Intensity (RMI). The first step is to compute and remove the primary field (IGRF) at the time and location of acquisition.  The survey was conducted between February and March 1988.\n",
+    "\n",
+    "##### Step 1a: Set the coordinate system of the survey\n",
+    "\n",
+    "Before computing the IGRF, we need to locate the survey in world coordinates. This specific project is referenced to the `MGA zone 50` coordinate system.\n",
+    "\n",
     "```{figure} ./images/mag_coordinates.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
-    "#### Step 2: Lookup/remove IGRF \n",
+    "##### Step 1b: Lookup/remove IGRF \n",
     "\n",
-    "The inversion routine requires Residual Magnetic Intensity (RMI), so we need to subtract the ambient field (IGRF). \n",
     "```{figure} ./images/mag_igrf.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
     "The **inducing field parameters** at the time and location of the survey are\n",
     "\n",
     "- Magnitude: 59127 nT\n",
-    "- Inclination: -66.9 $\\textdegree$\n",
-    "- Declination: -1.05 $\\textdegree$  \n",
+    "- Inclination: -66.9$\\degree$\n",
+    "- Declination: -1.05$\\degree$  \n",
     "\n",
-    "#### Step 3: Detrend\n",
+    "#### Step 2: Detrend\n",
     "The local background field appears to be slightly lower (~112 nT) than the computed IGRF model, as most of the data away from the main anomaly are below 0. To avoid modelling this background trend, we can remove the median value. \n",
     "\n",
     "```{figure} ./images/mag_detrend.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
-    "#### Step 4: Downsampling\n",
+    "#### Step 3: Downsampling\n",
     "\n",
-    "We can downsample the data along line to reduce the computation cost and bring the resolution closer to the gravity survey. Since the average flight height of this survey was 60 m, we can confidently downsample the lines by the same amount without affecting the wavelengths contained in the data.\n",
+    "We can downsample the data along lines to reduce the computation cost of the inversion. Since the average flight height of this survey was 60 m, we can confidently downsample the lines by the same amount without affecting the wavelengths contained in the data.\n",
     "\n",
     "```{figure} ./images/mag_downsample.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
     "### Create a mesh\n",
     "\n",
-    "This time, we will create a mesh using the [Octree Mesh Creation](mesh-design) application. In preparation for the joint inversion, we will simply modify the gravity mesh parameters.\n",
+    "This time, we will create a mesh using the [Octree Mesh Creation](mesh-design) application. In preparation for the joint inversion, we will simply modify the gravity mesh parameters. By doing so, we guarantee that the extent and base cell size remain the same, only the refinements will be optimized to the magnetic survey.\n",
+    "\n",
+    "```{figure} ./images/mag_mesh.png\n",
+    "```\n",
     "\n",
     "#### Step 1: Load the octree parameters\n",
-    "Inspect the files attached to the gravity mesh, and load the `ui.json`.\n",
+    "Inspect the files attached to the gravity mesh object and load the `ui.json`.\n",
     "\n",
     "#### Step 2: Modify the refinements\n",
     "Change the input object for `Refinement A` for the curve object of the magnetic survey.\n",
     "\n",
     "#### Step 3: Run and load the results\n",
     "\n",
-    "```{figure} ./images/mag_mesh.png\n",
-    "```\n",
-    "\n",
-    "By doing so, we guarantee that the extent and base cell size remain the same - only the refinements will be catered to the magnetic survey.\n",
     " \n",
     "### Inversion options\n",
     "\n",
     "The following options are set for the inversion.\n",
     "\n",
     "```{figure} ./images/mag_setup.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
     "```\n",
     "\n",
     "- Set the inducing field parameters as described above.\n",
@@ -196,7 +236,7 @@
     "We note the following:\n",
     "\n",
     " - It took 5 iterations to converge to the target misfit.\n",
-    " - The following 21 iterations have increased the model complexity ($phi_m$) but preserved the data fit ($phi_d$).\n",
+    " - The following 21 iterations have increased the model complexity ($phi_m$) while preserving the data fit ($phi_d$).\n",
     " - Small anomalies are under-fitted, which could warrant a second inversion with lower uncertainties.\n",
     "\n",
     "#### Smooth solution (L2-norm)\n",
@@ -213,6 +253,24 @@
     "\n",
     "As an alternative solution, the compact model (iteration 21) recovers a well-defined dense body within a mostly uniform background. Susceptibility contrasts have substantially increased in the range of [0.0, 2.0] SI.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfabe262-1769-450a-bd8d-4a48de0ea408",
+   "metadata": {},
+   "source": [
+    "## Joint cross-gradient\n",
+    "\n",
+    "After inverting the gravity and magnetic data independently, and recovering anomalies with similar shapes and positions in both, the next step is to invert both datasets jointly. We are going to employ the cross-gradient constraint to promote alignment of edges in the density and susceptibility models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2932d2a-285d-4fa0-908c-1ab3eaa844b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
