--- a/docs/inversion/data_misfit.ipynb
+++ b/docs/inversion/data_misfit.ipynb
@@ -5,8 +5,6 @@
    "id": "43572ed1",
    "metadata": {},
    "source": [
-    "(data_misfit)=\n",
-    "\n",
     "# Data Fitting\n",
     "\n",
     "The data misfit function ($\\phi_d$) measures the quality of a model $\\mathbf{m}$ at **fitting the observed data**. It generally takes the form\n",
@@ -37,12 +35,12 @@
    "source": [
     "## Uncertainties\n",
     "\n",
-    "As mentioned in the [Data Misfit](#Data-Misfit) section, we want to assign **data uncertainties** that reflect our inability to perfectly replicate the observed data, within an acceptable level. While many strategies can be used, we are going to demonstrate basic principles to assess the effectiveness of a chosen method. We will employ two basic strategies:\n",
+    "As mentioned in the :std:ref:`Data Misfit` section, we want to assign **data uncertainties** that reflect our inability to perfectly replicate the observed data, within an acceptable level. While many strategies can be used, we are going to demonstrate basic principles to assess the effectiveness of a chosen method. We will employ two basic strategies:\n",
     "\n",
-    "- [Floor](#Constant-floor) value set as a constant,\n",
-    "- [Amplitude-based (%)](#Amplitude-(%)) values with variable weights.\n",
+    "- [Floor](constant-floor) value set as a constant,\n",
+    "- [Amplitude-based (%)](amplitude-perct) values with variable weights.\n",
     "\n",
-    "We are going to use the synthetic magnetic example shown below, and provided [here](). We added 20 nT of random Gaussian noise to the simulated data to emulate field conditions."
+    "We are going to use the synthetic magnetic example shown below. We added 20 nT of random Gaussian noise to the simulated data to emulate field conditions."
    ]
   },
   {
@@ -60,6 +58,8 @@
    "id": "83b654f4",
    "metadata": {},
    "source": [
+    "(constant-floor)=\n",
+    "\n",
     "### Constant floor\n",
     "\n",
     "The simplest choice is to assign a constant value across the entire dataset - also referred to as **\"floor\"** uncertainties.  It is related to the expected standard deviation of a Gaussian distribution if the noise is random.\n",
@@ -129,6 +129,8 @@
    "id": "81f6f40e",
    "metadata": {},
    "source": [
+    "(amplitude-perct)=\n",
+    "\n",
     "### Amplitude (%)\n",
     "\n",
     "The second common strategy is to assign uncertainties based on the strength of the signal. In this scenario, we have assigned 10% of the amplitude of data plus a small floor (2 nT) to avoid singularity near zero:\n",
@@ -139,7 +141,7 @@
     "\n",
     "\n",
     "The figures below show the predicted data and recovered model after convergence of the inversion.\n",
-    "We note that the predicted data fit well in the background, but underfit directly over the main anomaly. This is generally not desirable as the important portion of the geophysical signal is in the large amplitudes. The poor fit is reflected in the recovered low susceptiblity values and smooth shape of the magnetic body."
+    "We note that the predicted data fit well in the background, but underfit directly over the main anomaly. This is generally not desirable as the important portion of the geophysical signal is in the large amplitudes. The poor fit is reflected in the recovered low susceptibility values and smooth shape of the magnetic body."
    ]
   },
   {
@@ -169,6 +171,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
