--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -28,17 +28,16 @@
     "- $\\mathbf{F}$ is some computer operation handling the physics\n",
     "- $\\mathbf{m}$ is a discrete model of physical property (density, susceptibility, conductivity, etc.)\n",
     "\n",
-    "Note that the forward simulation $\\mathbf{F}(\\mathbf{m})$ varies in complexity depending on the type of geophysical survey: from a simple dense arrays for potential fields:\n",
+    "Note that the forward simulation $\\mathbf{F}(\\mathbf{m})$ varies in complexity depending on the type of geophysical survey: from a simple dense array for potential fields:\n",
     "\n",
-    "- [Gravity](gravity.ipynb)\n",
-    "- [Magnetics](magnetic.ipynb)\n",
+    "- [Gravity](../tutorials/gravity.ipynb)\n",
+    "- [Magnetics](../tutorials/magnetic.ipynb)\n",
     "\n",
     "to elaborate partial differential equations for EM problems:\n",
     "\n",
-    "- [Direct Current](dc_ip.ipynb)\n",
-    "- [Magnetotellurics](mt.ipynb)\n",
-    "- [Frequency-Domain EM](frequency_em.ipynb)\n",
-    "- [Time-Domain EM](time_em.ipynb)\n",
+    "- [Direct Current](../tutorials/dc_resistivity.ipynb)\n",
+    "- [Magnetotellurics](../tutorials/tipper.ipynb)\n",
+    "- [Time-Domain EM](../tutorials/airborne_tem.ipynb)\n",
     "\n",
     "All that matters at this point is that `SimPEG` knows how to compute data given a model $\\mathbf{m}$.\n",
     "\n",
@@ -79,12 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ae60914b",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinalg\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LinAlgError\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy.linalg import LinAlgError"
@@ -129,16 +140,16 @@
     "\n",
     "## Inverse problem\n",
     "\n",
-    "In a mineral exploration context, we can collect data over the Earth but generally know little about the source of the signal (geology and physical properties). This is where the inversion process is required. In an ideal world we could simply perform the inverse of our forward simulation\n",
+    "In a mineral exploration context, we can collect data over the Earth, but generally know little about the source of the signal (geology and physical properties). This is where the inversion process is required. In an ideal world, we could simply perform the inverse of our forward simulation\n",
     "\n",
     "$$\n",
-    "\\mathbf{m} = \\mathbf{F}^{-1} \\mathbf{d}\n",
+    "\\mathbf{m} = \\mathbf{F}^{-1} \\mathbf{d}\\;.\n",
     "$$\n",
     "\n",
-    "but this operation is never possible in practice. First, there are too many unknowns compared to the amount of data, so $\\mathbf{F}^{-1}$ does not exist. Secondly, the data are generally noisy so that we would have:\n",
+    "However, this operation is never possible in practice. First, there are too many unknowns compared to the amount of data, so $\\mathbf{F}^{-1}$ does not exist. Secondly, the data are generally noisy, so we would have\n",
     "\n",
     "$$\n",
-    "\\mathbf{m} = \\mathbf{F}^{-1} (\\mathbf{d + e})\n",
+    "\\mathbf{m} = \\mathbf{F}^{-1} (\\mathbf{d + e})\\;.\n",
     "$$\n",
     "\n",
     "This is referred to as an ill-posed problem. A common way to still find a (good) answer is to formulate inversion as a weighted least-squares optimization problem of the form:\n",
@@ -149,7 +160,7 @@
     "\n",
     "such that we have a global function $\\phi(m)$ made up of two competing objectives:\n",
     "\n",
-    "- $\\phi_d$ is the [data misfit](data_misfit.ipynb) function that measures how well some model ($\\mathbf{m}$) can **fit the data**\n",
+    "- $\\phi_d$ is the [data misfit](./data_misfit.ipynb) function that measures how well some model ($\\mathbf{m}$) can **fit the data**\n",
     "\n",
     "$$\n",
     "\\phi_d =\\sum_{i=1}^{N}\\left(w_i (d_i^{pred} - {d}_i^{obs})\\right)^2\n",
@@ -302,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
