--- a/docs/inversion/regularization.ipynb
+++ b/docs/inversion/regularization.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "- [General Lp-norms](lp-norm)\n",
     "\n",
-    "While often referred to as an \"unconstrained inversion\", one could argue that the conventional model norm regularizations do still incorporate some degree of geological information, at least in the form of physical property distribution. Exactly what kind of a priori information is available dictates the complexity of the constraints. For more advanced petrophysical and/or geometric constraints, see the [Joint Inversion](#joint_inversion.ipynb) section."
+    "While often referred to as an \"unconstrained inversion\", one could argue that the conventional model norm regularizations do still incorporate some degree of geological information, at least in the form of physical property distribution. Exactly what kind of a priori information is available dictates the complexity of the constraints. For more advanced petrophysical and/or geometric constraints, see the [Joint Inversion](./joint_inversion.ipynb) section."
    ]
   },
   {
@@ -152,7 +152,7 @@
     "\n",
     "Here the superscript $(k)$ denotes the inversion iteration number. This is also known as an iterative re-weighted least-squares (IRLS) method. For more details on the implementation refer to {cite:t}`fournier_2019`.\n",
     "\n",
-    "The next two sub-sections apply this methodology to the [model smallness](#Reference-model) and [model smoothness](#Model-smoothness) regularizers.\n",
+    "The next two sub-sections apply this methodology to the [model smallness](reference-model) and [model smoothness](model-smoothness) regularizers.\n",
     "\n",
     "![reg_lp](./images/regularization_lp.png)\n",
     "\n",
@@ -165,6 +165,8 @@
    "id": "a89bf21c",
    "metadata": {},
    "source": [
+    "(reference-model)=\n",
+    "\n",
     "### Smallness norm model\n",
     "\n",
     "The first option is to impose sparsity assumptions on the model values.\n",
@@ -176,7 +178,11 @@
     "\n",
     "That is, we ask the inversion to recover anomalies that have small volumes but large physical property contrasts. This is desirable if we know the geological bodies to be discrete and compact (e.g. kimberlite pip, dyke, etc.). The example below demonstrates the outcome of an inversion for different combinations of norms applied to the model\n",
     "\n",
-    "![sparse_model](./images/sparse_models.png)\n",
+    "```{figure} ./images/sparse_models.png\n",
+    "---\n",
+    "name: sparse_model\n",
+    "---\n",
+    "```\n",
     "\n",
     "The [figure above](sparse_model) shows vertical sections through the true and recovered models (from left to right) with L2, L1 and L0-norm on the model values.\n",
     "\n",
@@ -197,6 +203,8 @@
    "id": "24179e0b",
    "metadata": {},
    "source": [
+    "(model-smoothness)=\n",
+    "\n",
     "### Smoothness norm model\n",
     "\n",
     "Next, we explore the effect of applying sparse norms on the model gradients. We have two options.\n",
@@ -217,8 +225,11 @@
     "\n",
     "In this case, we are requesting a model that has either large or no (zero) gradients. This promotes anomalies with sharp contrast and constant values within.\n",
     "\n",
-    "![flat_model](./images/flat_models.png)\n",
-    "\n",
+    "```{figure} ./images/flat_models.png\n",
+    "---\n",
+    "name: flat_model\n",
+    "---\n",
+    "```\n",
     "\n",
     "The [figure above](flat_model) shows vertical sections through the true and recovered models (from left to right) with L2, L1 and L0-norm on the model gradients.\n",
     "\n",
@@ -244,21 +255,22 @@
     "\\phi(m) \\approx \\sum_{i} \\sqrt{(\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2} \\;,\n",
     "$$\n",
     "\n",
-    "we recover the total-variation (TV) function. Lastly for $p=2$\n",
+    "we recover the total-variation (TV) function. \n",
+    "Lastly, for $p=2$\n",
     "\n",
     "$$\n",
-    "\\phi(m) = \\sum_{i} (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2\n",
+    "\\phi(m) = \\sum_{i} (\\mathbf{G}_x \\mathbf{m})_i^2 + (\\mathbf{G}_y \\mathbf{m})_i^2 + (\\mathbf{G}_z \\mathbf{m})_i^2 \\;,\n",
     "$$\n",
     "\n",
-    "we recover the [smooth regularization](smooth-reg).\n",
+    "we recover the smooth regularization.\n",
     "\n",
     "\n",
     "#### Gradient type: Components\n",
     "\n",
-    "Alternatively, we can treat each gradient term independently such that\n",
+    "Alternatively, we can treat each gradient term independently, such that\n",
     "\n",
     "$$\n",
-    "\\phi(m) = \\| \\mathbf{G}_x \\mathbf{m} \\|_p + \\| \\mathbf{G}_y \\mathbf{m} \\|_p + \\| \\mathbf{G}_z \\mathbf{m} \\|_p\n",
+    "\\phi(m) = \\| \\mathbf{G}_x \\mathbf{m} \\|_p + \\| \\mathbf{G}_y \\mathbf{m} \\|_p + \\| \\mathbf{G}_z \\mathbf{m} \\|_p \\;.\n",
     "$$\n",
     "\n",
     "This formulation tends to recover box-like anomalies with edges aligned with the Cartesian axes. This is generally not desirable unless the gradients can be rotated in 3D.\n"
@@ -290,6 +302,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
