--- a/docs/tutorials/gravity.ipynb
+++ b/docs/tutorials/gravity.ipynb
@@ -67,7 +67,7 @@
     "```{figure} ./images/magnetics/mesh_core.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: mag_core\n",
+    "name: grav_core\n",
     "---\n",
     "Core mesh parameters.\n",
     "```\n",
@@ -82,7 +82,7 @@
     "```{figure} ./images/magnetics/mesh_refinement.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: mag_refinement\n",
+    "name: grav_refinement\n",
     "---\n",
     "Refinement strategy used for the magnetic modeling.\n",
     "```\n",
@@ -195,6 +195,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
